--- a/app.css
+++ b/app.css
@@ -28,6 +28,7 @@ h1 {
 
 h1:hover {
     color:hsl(178, 100%, 50%);
+    transition: .5s;
 }
 
 p {
@@ -49,6 +50,7 @@ a span {
 
 a span:hover {
     color:hsl(178, 100%, 50%);
+    transition: .5s;
 }
 
 .card {
@@ -80,10 +82,6 @@ a:hover span.overlay {
     max-width: 100%;
     margin: 1.6em 0;
     border-radius: 5%;
-}
-
-.overlay:hover {
-    background-color: hsl(178, 100%, 50%);
 }
 
 .nftInfo {
