--- a/app.css
+++ b/app.css
@@ -80,7 +80,7 @@ a:hover span.overlay {
 
 .nftImage {
     max-width: 100%;
-    margin: 1.6em 0;
+    margin: 1.6em 0 1em 0;
     border-radius: 5%;
 }
 
@@ -94,11 +94,13 @@ p.price {
     color: hsl(178, 100%, 50%);
     font-weight: 600;
     display: inline-flex;
+    margin-top: -.5em;
 }
 
 p.timeLeft {
     display: inline-flex;
     float: right;
+    margin-top:-.5em;
 }
 
 .price img, .timeLeft img {
@@ -111,6 +113,10 @@ p.timeLeft {
     width: 10%;
     margin-right: .75em;
     vertical-align: middle;
+}
+
+.createdBy {
+    margin-bottom: 1em;
 }
 
 .attribution {
