more fiddling with size

--- a/app.css
+++ b/app.css
@@ -35,7 +35,7 @@ h1 a:hover {
 p {
     color: hsl(215, 51%, 70%);
     padding: 1em 0;
-    line-height: 1.5rem;
+    line-height: 1.25rem;
     /* font-size: 18px;*/
     font-size: .9rem;
     font-weight: 300;
@@ -62,13 +62,17 @@ a {
     justify-content: center;
     flex-direction: column;
     /* max-width: 375px; */
-    max-width: 350px;
+    max-width: 365px;
     border-radius: 5%;
 }
 
 .linkImage {
     /* max-width: 87%; */
-    max-width: 80%;
+    max-width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     
 }
 
@@ -77,13 +81,13 @@ a:hover span.overlay {
     background-color: rgba(0,255,247,0.3);
     /* height: 326px;
     width: 326px; */
-    height: 280px;
-    width: 280px;
+    height: 310px;
+    width: 310px;
     position: relative;
     /* bottom: 344px; */
-    bottom: 298px;
+    bottom: 325px;
     /* margin-bottom: -325px; */
-    margin-bottom: -280px;
+    margin-bottom: -310px;
     border-radius: 5%;
     justify-content: center;
     align-items: center;
@@ -99,7 +103,7 @@ a:hover span.overlay {
 
 .nftImage {
     max-width: 100%;
-    margin: 1.6rem 0 1rem 0;
+    margin: 1.6rem 1rem 1rem 1rem;
     border-radius: 5%;
 }
 
@@ -113,7 +117,8 @@ p.price {
     color: hsl(178, 100%, 50%);
     font-weight: 600;
     display: inline-flex;
-    margin-top: -.25rem;
+    /* margin-top: -.25rem; */
+    margin-top: -.35rem;
 }
 
 p.price::before {
@@ -124,7 +129,8 @@ p.price::before {
 p.timeLeft {
     display: inline-flex;
     float: right;
-    margin-top:-.25rem;
+    /* margin-top:-.25rem; */
+    margin-top: -.35rem;
 }
 
 p.timeLeft::before {
